--- a/pom.xml
+++ b/pom.xml
@@ -17,11 +17,23 @@
     <properties>
         <java.version>1.8</java.version>
         <scalaVersion>2.11.4</scalaVersion>
-        <sparkVersion>2.4.1</sparkVersion>
+        <spark.version>2.4.1</spark.version>
 
     </properties>
 
     <dependencies>
+
+        <dependency>
+            <groupId>org.apache.spark</groupId>
+            <artifactId>spark-streaming_2.11</artifactId>
+            <version>${spark.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.apache.spark</groupId>
+            <artifactId>spark-sql_2.11</artifactId>
+            <version>${spark.version}</version>
+        </dependency>
         <dependency>
             <groupId>org.reflections</groupId>
             <artifactId>reflections</artifactId>
